--- a/_posts/entry/2019-06-27-bore.md
+++ b/_posts/entry/2019-06-27-bore.md
@@ -5,7 +5,7 @@ name_fr: Alésage
 name_en: Bore
 desc_fr: Opération qui consiste à usiner avec soin la surface intérieure d’un cylindre ou de toute autre pièce creuse. Le résultat de cette opération est un diamètre intérieur.
 desc_en: A hole drilled or milled by boring (manufacturing), especially a large hole.
-img: ["http://simonbaudry.free.fr/dico-meca/bride-tournante-aluminium-as-13-alesage-type-metrique-pn-10-5713-dmod1.jpg"] 
+img: ["bride-tournante-aluminium-as-13-alesage-type-metrique-pn-10-5713-dmod1.jpg"] 
 src: 
 date:   2019-03-15 17:58:00 +0100
 categories: [Design mécanique, Procédé de manufacturing]
