Add new entries and images. Bevel, Edge, Mortise Chisel, Ring, Rod, Axis, Boss

--- a/_posts/entry/2019-06-27-shaft.md
+++ b/_posts/entry/2019-06-27-shaft.md
@@ -5,7 +5,7 @@ name_fr: Arbre
 name_en: Shaft
 desc_fr: Cylindre ou cone jouant le rôle d'axe de rotation, transmettant un couple.
 desc_en: Rotating machine element, usually circular in cross section, which is used to transmit power from one part to another, or from a machine which produces power to a machine which absorbs power.
-img: ["2017-08-28_155246axe.png"] 
+img: ["2017-08-28_155246axe.png","2017-08-28_142511axe.png"] 
 src: 
 date:   2019-03-15 17:58:00 +0100
 categories: [Eléments tournants, Transmission, Composant mécanique]
